Upgrade to Java 25 with language modernization and next iteration plan
- Java 25, maven-compiler-plugin 3.14.0 with <release>, Lombok 1.18.42
- Sealed exception hierarchy: TokenException sealed permits 4 final subclasses
- Unnamed variables (_) in catch blocks and lambda parameters (JEP 456)
- Virtual threads in TokenManagerDemo and concurrency tests
- String.format() simplified to concatenation where appropriate
- Fixed file/class name mismatch: Oauth2TokenManager -> OAuth2TokenManager
- Updated CLAUDE.md for Java 25 and sealed hierarchy
- Added NEXT_ITERATION_PLAN.md with enhancement roadmap

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>